tests/struct/access_uneclared_field.rev
struct Foo {
    a: int
}

var f = Foo()

print f.aa // error: structure 'Foo' has no field 'aa'